# rinha-dotnetrust

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  Rinha.slnx  compose.fd-passing.yml  compose.local.yml  compose.search-service.yml  docker-compose.yml  haproxy.cfg  info.json
.github/workflows/: publish-image.yml
bench/: diagnostic-matrix.tsv  lib.sh  run-build-benchmark.sh  run-diagnostic-matrix.sh  run-official-local.sh  run-smoke.sh
native/rinha-native/: Cargo.toml
native/rinha-native/src/: bin.rs  lib.rs
scripts/: generate_extended_test_data.py  k6_rinha_test.js  publish-api-image.sh  run_benchmark_matrix.sh  run_fd_resource_matrix.sh  run_resource_matrix.sh  summarize_matrix.py  summarize_resource_matrix.py
src/Rinha.Api/: Program.cs  Rinha.Api.csproj
src/Rinha.Core/: DotNetFraudSearch.cs  FlatFraudCountCorrections.cs  FraudIndex.cs  FraudSearchRuntime.cs  FraudVectorizer.cs  IFraudSearch.cs  NativeFraudSearch.cs  Rinha.Core.csproj  SearchServiceFraudSearch.cs  VectorSpec.cs
submission/: Dockerfile  docker-compose.diagnostic.yml  docker-compose.yml
tools/Rinha.Preprocess/: NativeIndexWriter.cs  NativeIvfIndexWriter.cs  Program.cs
tools/Rinha.VerifyNative/: Program.cs  Rinha.VerifyNative.csproj
