[package]
name = "rinha-native"
version = "0.1.0"
edition = "2024"

[lib]
name = "rinha_native"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rinha-search-service"
path = "src/bin/search_service.rs"

[dependencies]
libc = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
